--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,11 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .hero-text {
